--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "www.scottmacleodcodes.com",
+  "homepage": "https://www.scottmacleodcodes.com/",
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
